--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
             <label for="voteValue">Make your vote</label></br>
             <select id="vote" name="voteValue" size="2">
                 <option value="true">YES</option>
-                <option value="no">NO</option>
+                <option value="false">NO</option>
             </select>
             
             <button id="button" type="submit">Go</button>
